# youtube_recommend

./: .env.example  .gitignore  Cargo.toml  README.md
src/: classifier_test.rs  main.rs
src/classifier/: keyword_extraction_classifier.rs  mod.rs  question_answering_classifier.rs  sentiment_classifier.rs  summarization_classifier.rs
src/youtube_transcript/: config.rs  mod.rs  parser.rs  youtube.rs
