[package]
name = "youtube_recommend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = "4.5.22"
dotenv = "0.15.0"
futures = "0.3.31"
roxmltree = "0.20.0"
once_cell = "1.17.2"
rust-bert = "0.23.0"
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.27.0", features = ["rt", "rt-multi-thread", "macros"] }
